# ray-worker

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  Worker_Dockerfile  alembic.ini  docker-compose.yml  logging.conf  project.env  pyproject.toml  run.sh
.github/workflows/: docker-image.yml
alembic/: env.py  script.py.mako
alembic/versions/: checkpoint.initial.py
etl/: __init__.py  app_manager.py  config.py  example_processor.py  file_processor_config.py  general_event_processor.py  path_helpers.py  pizza_tracker.py  task_manager.py  toml_processor.py  util.py
etl/database/: database.py  interfaces.py
etl/example/: example_config.toml  example_text_stream_processor.py  generic_kafka_consumer.py  generic_kafka_producer.py  streaming_text_consumer.py  streaming_text_producer.py
etl/messaging/: interfaces.py  kafka_consumer.py  kafka_producer.py  s3_bucket_workflow_worker.py  singleton.py  streaming_payload_worker.py  streaming_txt_payload_worker.py
etl/object_store/: interfaces.py  minio.py  object_id.py
example/: example_config.toml  test.csv
lib_ray_worker/: app_manager.py  config.py  entrypoint.py  file_processor_config.py  general_event_processor.py  pizza_tracker.py  task_manager.py  toml_processor.py  util.py
lib_ray_worker/adapters/: post_gres_wrapper.py
lib_ray_worker/config/: __init__.py  _base.py  adapters.py
lib_ray_worker/database/: database.py  interfaces.py
lib_ray_worker/example/: __init__.py  example_config.toml  (+4 more)
scripts/: run_manager.sh  run_worker.sh  semver.sh  version.sh
tests/: test_config.toml  test_file_processor_config.py  test_load_python.py  test_object_id.py  test_path_helpers.py  test_pizza_tracker.py  test_python_config.toml  utils.py
(+12 files in other folders)
