[tool.poetry]
name = "lib-ray-worker"
version = "4.0.0"
description = ""
authors = []

packages = [
    { include = "lib_ray_worker"}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
kafka-python = "<2.0.0"
toml = "^0.10.2"
minio = "^7.1.8"
uvicorn = "^0.17.6"
psutil = "^5.9.0"
aioch = "^0.0.2"
fastapi = "=0.103.1"
fastapi-offline = "=1.7.0"
ray = "~2"
pydantic = "~2"
pydantic-settings = "~2"

[tool.poetry.dev-dependencies]
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
