[tool.poetry]
name = "lib-ray-worker"
version = "4.0.0"
description = ""
authors = []

packages = [
    { include = "lib_ray_worker"}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
kafka-python = "<2.0.0"
toml = "^0.10.2"
minio = "^7.1.8"
psutil = "^5.9.0"
ray = "~2"
pydantic = "~2"
pydantic-settings = "~2"
asyncpg = "=0.27.0"
alembic = "=1.11.1"
SQLAlchemy-Utils = "^0.41.1"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.23"}
sqlmodel = "^0.0.14"

[tool.poetry.dev-dependencies]
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
